[package]
name = "citrea-light-client-prover"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
# Citrea Deps
citrea-common = { path = "../common", optional = true }
citrea-primitives = { path = "../primitives", optional = true }

# Sov SDK deps
sov-db = { path = "../sovereign-sdk/full-node/db/sov-db", optional = true }
sov-ledger-rpc = { path = "../sovereign-sdk/full-node/sov-ledger-rpc", features = ["client"], optional = true }
sov-modules-api = { path = "../sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-rollup-blueprint = { path = "../sovereign-sdk/module-system/sov-modules-rollup-blueprint", optional = true }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
sov-stf-runner = { path = "../sovereign-sdk/full-node/sov-stf-runner", optional = true }

# 3rd-party deps
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bincode = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true, optional = true, features = ["http-client", "server", "client"] }
metrics = { workspace = true, optional = true }
metrics-derive = { workspace = true, optional = true }
once_cell = { workspace = true, default-features = true, optional = true }
reth-primitives = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-util = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
sov-mock-da = { path = "../sovereign-sdk/adapters/mock-da", features = ["native"] }
sov-mock-zkvm = { path = "../sovereign-sdk/adapters/mock-zkvm" }
tempfile = { workspace = true }

[features]
default = []
native = [
  "dep:citrea-primitives",
  "dep:citrea-common",
  "dep:sov-db",
  "dep:sov-modules-rollup-blueprint",
  "dep:sov-stf-runner",
  "dep:sov-ledger-rpc",
  "dep:anyhow",
  "dep:async-trait",
  "dep:jsonrpsee",
  "dep:metrics",
  "dep:metrics-derive",
  "dep:once_cell",
  "dep:reth-primitives",
  "dep:tokio",
  "dep:tokio-util",
  "dep:tower",
  "dep:tracing",
]
