[package]
name = "prover-services"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
# Sov SDK deps
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }

# 3rd-party deps
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
