[package]
name = "citrea-risc0-adapter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
readme = "README.md"
repository = { workspace = true }
description = "An adapter allowing Citrea to use risc0 proving system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true, optional = true }
borsh = { workspace = true }
citrea-common = { path = "../common", optional = true }
hex = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = ["std"] }
rzup = { workspace = true, optional = true }
serde = { workspace = true }
sov-db = { path = "../sovereign-sdk/full-node/db/sov-db", optional = true }
sov-rollup-interface = { path = "../sovereign-sdk/rollup-interface" }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
uuid = { workspace = true, optional = true }
boundless-market = { workspace = true, optional = true }
risc0-build-ethereum = { workspace = true, optional = true }
risc0-ethereum-contracts = { workspace = true, optional = true }
url = { version = "2.5.4", optional = true}

[features]
default = []
testing = []
native = [
  "dep:alloy-primitives",
  "dep:anyhow",
  "dep:bonsai-sdk",
  "dep:sov-db",
  "dep:metrics",
  "dep:hex",
  "dep:tokio",
  "dep:rzup",
  "dep:uuid",
  "risc0-zkvm/bonsai",
  "risc0-zkvm/client",
  "sov-rollup-interface/native",
  "dep:boundless-market",
  "dep:risc0-build-ethereum",
  "dep:risc0-ethereum-contracts",
  "dep:url",
  "dep:async-trait",
  "dep:citrea-common",
]
