[package]
name = "risc0"
version = "0.5.0-rc.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
resolver = "2"

[build-dependencies]
risc0-build = { workspace = true }

[package.metadata.risc0]
methods = [
  "batch-proof-bitcoin",
  "batch-proof-mock",
  "light-client-proof-bitcoin",
  "light-client-proof-mock",
]

[features]
bench = []
short-prefix = []
