[package]
name = "citrea-risc0-batch-proof"
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
resolver = "2"

[build-dependencies]
risc0-build = { workspace = true, features = ["unstable"] }

[package.metadata.risc0]
methods = [
  "bitcoin",
  "mock",
]

[features]
bench = []
testing = []
