[package]
name = "batch-proof-bitcoin"
version = "0.6.0"
edition = "2021"
resolver = "2"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.2.3", default-features = false, features = ["unstable"] }
risc0-zkvm-platform = { version = "1.2.3", features = ["heap-embedded-alloc"] }

anyhow = "1.0.95"
bitcoin-da = { path = "../../../../crates/bitcoin-da", default-features = false }
citrea-primitives = { path = "../../../../crates/primitives" }
citrea-risc0-adapter = { path = "../../../../crates/risc0" }
citrea-stf = { path = "../../../../crates/citrea-stf" }
const-hex = "1.14"
sov-modules-api = { path = "../../../../crates/sovereign-sdk/module-system/sov-modules-api", default-features = false }
sov-modules-stf-blueprint = { path = "../../../../crates/sovereign-sdk/module-system/sov-modules-stf-blueprint" }
sov-rollup-interface = { path = "../../../../crates/sovereign-sdk/rollup-interface" }
sov-state = { path = "../../../../crates/sovereign-sdk/module-system/sov-state" }

[features]
testing = ["citrea-primitives/testing"]

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
ed25519-dalek = { git = "https://github.com/risc0/curve25519-dalek", tag = "curve25519-4.1.2-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
secp256k1 = { git = "https://github.com/Sovereign-Labs/rust-secp256k1.git", branch = "risc0-compatible-0-29-0" }
tiny-keccak = { git = "https://github.com/risc0/tiny-keccak", tag = "tiny-keccak/v2.0.2-risczero.0" }
k256 = { git = "https://github.com/risc0/RustCrypto-elliptic-curves", tag = "k256/v0.13.4-risczero.1" }

[profile.release]
debug = 0
lto = true
opt-level = 3
codegen-units = 1
